2009-05-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/element.txt, data/element.h: Update atomic radii with
	consistent sets from recent publications.

2009-04-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/molchrg.h, include/openbabel/internalcoord.h,
	include/openbabel/typer.h, include/openbabel/chains.h,
	include/openbabel/descriptor.h, include/openbabel/atomclass.h,
	include/openbabel/parsmart.h, include/openbabel/grid.h: 
	Improved forward declarations, thanks to Noel's python script.

2009-04-26  Michael Banck  <mbanck@gmx.net>

	* src/formats/moldenformat.cpp (WriteMolecule): New method,
	implementing atom coordinates and vibrations.  Set flags() to
	WRITEONEONLY for now.

	* src/formats/moldenformat.cpp (ReadMolecule): Do not care about case
	of vibration header tag for the displacements.  MOLPRO writes
	upper-case "Vibration", Molden writes lower-case "vibration".
	
	* src/formats/moldenformat.cpp (BOHR_TO_ANGSTROM, ANGSTROM_TO_BOHR):
	New definitions.  
	(ReadMolecule): Use them.
	(WriteMolecule): Likewise.

	* src/formats/moldenformat.cpp (ReadMolecule): Do not continue to next
	line when a block is finished as the current lineBuffer already
	consists of the next [KEYWORD].

	* src/generic.cpp (GetNumberOfFrequencies): Fix return value.
	* src/formats/moldenformat.cpp (WriteMolecule): Adjusted.

	* src/formats/moldenformat.cpp (Description): Updated.

	* src/formats/moldenformat.cpp (WriteMolecule): Do not set intensities
	to zero if none are present.

2009-04-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/obiter.h (OpenBabel): Add forward declaration
	of OBRing and OBRingData suggested by Anton Simakov.

2009-04-22  Noel O'Boyle  <baoilleach@gmail.com>

	* include/openbabel/rotor.h: #ifndef SWIG added due to problems
	compiling the CSharp bindings

2009-04-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/Makefile.am: Fix some conditional compiles. Should